# cmake

./: CMakeLists.txt  README.md  build.sh
test/: macro.c
